add lab Machine Learning

--- a/lab-intro_to_ml.ipynb
+++ b/lab-intro_to_ml.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,11 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8693, 14)"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "spaceship.shape"
    ]
   },
   {
@@ -224,11 +235,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      object\n",
+       "HomePlanet       object\n",
+       "CryoSleep        object\n",
+       "Cabin            object\n",
+       "Destination      object\n",
+       "Age             float64\n",
+       "VIP              object\n",
+       "RoomService     float64\n",
+       "FoodCourt       float64\n",
+       "ShoppingMall    float64\n",
+       "Spa             float64\n",
+       "VRDeck          float64\n",
+       "Name             object\n",
+       "Transported        bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spaceship.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "spaceship['VIP'] = spaceship['VIP'].astype(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      object\n",
+       "HomePlanet       object\n",
+       "CryoSleep        object\n",
+       "Cabin            object\n",
+       "Destination      object\n",
+       "Age             float64\n",
+       "VIP                bool\n",
+       "RoomService     float64\n",
+       "FoodCourt       float64\n",
+       "ShoppingMall    float64\n",
+       "Spa             float64\n",
+       "VRDeck          float64\n",
+       "Name             object\n",
+       "Transported        bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spaceship.dtypes"
    ]
   },
   {
@@ -240,11 +319,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PassengerId       0\n",
+      "HomePlanet      201\n",
+      "CryoSleep       217\n",
+      "Cabin           199\n",
+      "Destination     182\n",
+      "Age             179\n",
+      "VIP               0\n",
+      "RoomService     181\n",
+      "FoodCourt       183\n",
+      "ShoppingMall    208\n",
+      "Spa             183\n",
+      "VRDeck          188\n",
+      "Name            200\n",
+      "Transported       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Comprobar si hay valores nulos en todo el DataFrame\n",
+    "valores_nulos = spaceship.isnull().sum()\n",
+    "\n",
+    "# Mostrar cuántos valores nulos tiene cada columna\n",
+    "print(valores_nulos)"
    ]
   },
   {
@@ -262,11 +367,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "spaceship = spaceship.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6771, 14)"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spaceship.shape"
    ]
   },
   {
@@ -287,11 +412,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Age', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Seleccionar solo las columnas numéricas\n",
+    "df_numerico = spaceship.select_dtypes(include=['number'])\n",
+    "\n",
+    "# Ver las columnas seleccionadas\n",
+    "print(df_numerico.columns)"
    ]
   },
   {
@@ -303,11 +440,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#Target in Transported column\n",
+    "\n",
+    "# Separar las características (X) y la etiqueta (y)\n",
+    "X = df_numerico  # Eliminamos la columna 'Transported' --> no aparece en la X\n",
+    "y = spaceship['Transported']  # La etiqueta es 'Transported'"
    ]
   },
   {
@@ -326,11 +467,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5416, 6) (1355, 6) (5416,) (1355,)\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Dividir el DataFrame en entrenamiento y prueba (80% entrenamiento, 20% prueba)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Ver las formas de los conjuntos de entrenamiento y prueba\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
    ]
   },
   {
@@ -358,11 +511,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Inicializar el clasificador KNN (usaremos K=5 como ejemplo)\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n"
    ]
   },
   {
@@ -374,11 +531,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "# Entrenar el modelo\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Predecir sobre el conjunto de prueba\n",
+    "y_pred = knn.predict(X_test)"
    ]
   },
   {
@@ -390,11 +551,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisión del modelo KNN: 0.7941\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Evaluar el modelo con la precisión (accuracy)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Precisión del modelo KNN: {accuracy:.4f}\")"
    ]
   },
   {
@@ -421,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
